--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -1916,16 +1916,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "df = pd.read_csv('olympics.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2084,7 @@
        "4     0      0       11     1     2     9              12  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2094,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2253,7 +2254,7 @@
        "Australasia (ANZ) [ANZ]       5              12  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2265,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2277,7 +2278,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2288,17 +2289,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "01 !\n",
-      "01 !.1\n",
-      "01 !.2\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th># Summer</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Total</th>\n",
+       "      <th># Winter</th>\n",
+       "      <th>Gold.1</th>\n",
+       "      <th>Silver.1</th>\n",
+       "      <th>Bronze.1</th>\n",
+       "      <th>Total.1</th>\n",
+       "      <th># Games</th>\n",
+       "      <th>Gold.2</th>\n",
+       "      <th>Silver.2</th>\n",
+       "      <th>Bronze.2</th>\n",
+       "      <th>Combined total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan (AFG)</th>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algeria (ALG)</th>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Argentina (ARG)</th>\n",
+       "      <td>23</td>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>28</td>\n",
+       "      <td>70</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>28</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Armenia (ARM)</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australasia (ANZ) [ANZ]</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         # Summer  Gold  Silver  Bronze  Total  # Winter  \\\n",
+       "Afghanistan (AFG)              13     0       0       2      2         0   \n",
+       "Algeria (ALG)                  12     5       2       8     15         3   \n",
+       "Argentina (ARG)                23    18      24      28     70        18   \n",
+       "Armenia (ARM)                   5     1       2       9     12         6   \n",
+       "Australasia (ANZ) [ANZ]         2     3       4       5     12         0   \n",
+       "\n",
+       "                         Gold.1  Silver.1  Bronze.1  Total.1  # Games  Gold.2  \\\n",
+       "Afghanistan (AFG)             0         0         0        0       13       0   \n",
+       "Algeria (ALG)                 0         0         0        0       15       5   \n",
+       "Argentina (ARG)               0         0         0        0       41      18   \n",
+       "Armenia (ARM)                 0         0         0        0       11       1   \n",
+       "Australasia (ANZ) [ANZ]       0         0         0        0        2       3   \n",
+       "\n",
+       "                         Silver.2  Bronze.2  Combined total  \n",
+       "Afghanistan (AFG)               0         2               2  \n",
+       "Algeria (ALG)                   2         8              15  \n",
+       "Argentina (ARG)                24        28              70  \n",
+       "Armenia (ARM)                   2         9              12  \n",
+       "Australasia (ANZ) [ANZ]         4         5              12  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2309,8 +2461,328 @@
     "        df.rename(columns={col:'Silver' + col[4:]}, inplace=True)\n",
     "    if col[:2]=='03':\n",
     "        df.rename(columns={col:'Bronze' + col[4:]}, inplace=True)\n",
-    "        "
+    "    if col[:1]=='№':\n",
+    "        df.rename(columns={col:'#' + col[1:]}, inplace=True)\n",
+    "df.head()        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Querying a Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Afghanistan (AFG)                               False\n",
+       "Algeria (ALG)                                    True\n",
+       "Argentina (ARG)                                  True\n",
+       "Armenia (ARM)                                    True\n",
+       "Australasia (ANZ) [ANZ]                          True\n",
+       "Australia (AUS) [AUS] [Z]                        True\n",
+       "Austria (AUT)                                    True\n",
+       "Azerbaijan (AZE)                                 True\n",
+       "Bahamas (BAH)                                    True\n",
+       "Bahrain (BRN)                                   False\n",
+       "Barbados (BAR) [BAR]                            False\n",
+       "Belarus (BLR)                                    True\n",
+       "Belgium (BEL)                                    True\n",
+       "Bermuda (BER)                                   False\n",
+       "Bohemia (BOH) [BOH] [Z]                         False\n",
+       "Botswana (BOT)                                  False\n",
+       "Brazil (BRA)                                     True\n",
+       "British West Indies (BWI) [BWI]                 False\n",
+       "Bulgaria (BUL) [H]                               True\n",
+       "Burundi (BDI)                                    True\n",
+       "Cameroon (CMR)                                   True\n",
+       "Canada (CAN)                                     True\n",
+       "Chile (CHI) [I]                                  True\n",
+       "China (CHN) [CHN]                                True\n",
+       "Colombia (COL)                                   True\n",
+       "Costa Rica (CRC)                                 True\n",
+       "Ivory Coast (CIV) [CIV]                         False\n",
+       "Croatia (CRO)                                    True\n",
+       "Cuba (CUB) [Z]                                   True\n",
+       "Cyprus (CYP)                                    False\n",
+       "                                                ...  \n",
+       "Sri Lanka (SRI) [SRI]                           False\n",
+       "Sudan (SUD)                                     False\n",
+       "Suriname (SUR) [E]                               True\n",
+       "Sweden (SWE) [Z]                                 True\n",
+       "Switzerland (SUI)                                True\n",
+       "Syria (SYR)                                      True\n",
+       "Chinese Taipei (TPE) [TPE] [TPE2]                True\n",
+       "Tajikistan (TJK)                                False\n",
+       "Tanzania (TAN) [TAN]                            False\n",
+       "Thailand (THA)                                   True\n",
+       "Togo (TOG)                                      False\n",
+       "Tonga (TGA)                                     False\n",
+       "Trinidad and Tobago (TRI) [TRI]                  True\n",
+       "Tunisia (TUN)                                    True\n",
+       "Turkey (TUR)                                     True\n",
+       "Uganda (UGA)                                     True\n",
+       "Ukraine (UKR)                                    True\n",
+       "United Arab Emirates (UAE)                       True\n",
+       "United States (USA) [P] [Q] [R] [Z]              True\n",
+       "Uruguay (URU)                                    True\n",
+       "Uzbekistan (UZB)                                 True\n",
+       "Venezuela (VEN)                                  True\n",
+       "Vietnam (VIE)                                   False\n",
+       "Virgin Islands (ISV)                            False\n",
+       "Yugoslavia (YUG) [YUG]                           True\n",
+       "Independent Olympic Participants (IOP) [IOP]    False\n",
+       "Zambia (ZAM) [ZAM]                              False\n",
+       "Zimbabwe (ZIM) [ZIM]                             True\n",
+       "Mixed team (ZZX) [ZZX]                           True\n",
+       "Totals                                           True\n",
+       "Name: Gold, Length: 147, dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Gold'] > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onlyGold = df[df['Gold']>0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th># Summer</th>\n",
+       "      <th>Gold</th>\n",
+       "      <th>Silver</th>\n",
+       "      <th>Bronze</th>\n",
+       "      <th>Total</th>\n",
+       "      <th># Winter</th>\n",
+       "      <th>Gold.1</th>\n",
+       "      <th>Silver.1</th>\n",
+       "      <th>Bronze.1</th>\n",
+       "      <th>Total.1</th>\n",
+       "      <th># Games</th>\n",
+       "      <th>Gold.2</th>\n",
+       "      <th>Silver.2</th>\n",
+       "      <th>Bronze.2</th>\n",
+       "      <th>Combined total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Algeria (ALG)</th>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Argentina (ARG)</th>\n",
+       "      <td>23</td>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>28</td>\n",
+       "      <td>70</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>18</td>\n",
+       "      <td>24</td>\n",
+       "      <td>28</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Armenia (ARM)</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australasia (ANZ) [ANZ]</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australia (AUS) [AUS] [Z]</th>\n",
+       "      <td>25</td>\n",
+       "      <td>139</td>\n",
+       "      <td>152</td>\n",
+       "      <td>177</td>\n",
+       "      <td>468</td>\n",
+       "      <td>18</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>43</td>\n",
+       "      <td>144</td>\n",
+       "      <td>155</td>\n",
+       "      <td>181</td>\n",
+       "      <td>480</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           # Summer  Gold  Silver  Bronze  Total  # Winter  \\\n",
+       "Algeria (ALG)                    12     5       2       8     15         3   \n",
+       "Argentina (ARG)                  23    18      24      28     70        18   \n",
+       "Armenia (ARM)                     5     1       2       9     12         6   \n",
+       "Australasia (ANZ) [ANZ]           2     3       4       5     12         0   \n",
+       "Australia (AUS) [AUS] [Z]        25   139     152     177    468        18   \n",
+       "\n",
+       "                           Gold.1  Silver.1  Bronze.1  Total.1  # Games  \\\n",
+       "Algeria (ALG)                   0         0         0        0       15   \n",
+       "Argentina (ARG)                 0         0         0        0       41   \n",
+       "Armenia (ARM)                   0         0         0        0       11   \n",
+       "Australasia (ANZ) [ANZ]         0         0         0        0        2   \n",
+       "Australia (AUS) [AUS] [Z]       5         3         4       12       43   \n",
+       "\n",
+       "                           Gold.2  Silver.2  Bronze.2  Combined total  \n",
+       "Algeria (ALG)                   5         2         8              15  \n",
+       "Argentina (ARG)                18        24        28              70  \n",
+       "Armenia (ARM)                   1         2         9              12  \n",
+       "Australasia (ANZ) [ANZ]         3         4         5              12  \n",
+       "Australia (AUS) [AUS] [Z]     144       155       181             480  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "onlyGold.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "onlyGold = onlyGold.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "# Summer          101\n",
+       "Gold              101\n",
+       "Silver            101\n",
+       "Bronze            101\n",
+       "Total             101\n",
+       "# Winter          101\n",
+       "Gold.1            101\n",
+       "Silver.1          101\n",
+       "Bronze.1          101\n",
+       "Total.1           101\n",
+       "# Games           101\n",
+       "Gold.2            101\n",
+       "Silver.2          101\n",
+       "Bronze.2          101\n",
+       "Combined total    101\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df[(df['Gold']>0)|(df['Gold.1']>0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
